# routes/api.php
@@ -1,6 +1,7 @@
 <?php
 
 use App\Http\Controllers\AnalyticsController;
+use App\Http\Controllers\ForecastController;
 use App\Http\Controllers\HealthController;
 use App\Http\Controllers\LicitacaoController;
 use Illuminate\Support\Facades\Route;
@@ -10,6 +11,8 @@ Route::get('/health', [HealthController::class, 'index']);
 Route::get('/licitacoes', [LicitacaoController::class, 'index']);
 Route::get('/licitacoes/{id}', [LicitacaoController::class, 'show'])
     ->whereNumber('id');
+
+Route::get('/forecast', [ForecastController::class, 'index']);
 
 Route::prefix('analytics')->group(function (): void {
     Route::get('/evolucao', [AnalyticsController::class, 'evolucao']);
